--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.1",
+    "sass": "^1.49.9",
+    "source-map-explorer": "^2.5.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
